# f-sri

./: .env.example  .gitignore  ACR-001-Migracion-MongoDB-PostgreSQL.md  MIGRATION_GUIDE.md  package.json
factuapi/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
factuapi/apps/authentication/: serializers.py  urls.py  views.py
factuapi/apps/clients/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
factuapi/apps/core/: __init__.py  admin.py  exceptions.py  models.py  tests.py  urls.py  views.py
factuapi/config/: __init__.py  celery.py  urls.py  wsgi.py
factuapi/config/settings/: base.py  local.py  production.py
factuapi/docker/: Dockerfile
factuapi/docker/nginx/: nginx.conf  nginx.prod.conf
factuapi/factuapi/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
factuapi/factuapi/settings/: base.py  development.py  production.py  testing.py
factuapi/requirements/: base.txt  development.txt  local.txt  production.txt
factuapi/scripts/: setup.sh
prisma/: schema.prisma  seed.ts
scripts/: setup-postgresql.sh
src/: index.ts
src/config/: database.ts
src/models/: Client.ts  IdentificationType.ts  Invoice.ts  InvoiceDetail.ts  InvoicePDF.ts  IssuingCompany.ts  Product.ts  User.ts
src/services/: invoice.service.ts
